# Hydrogen

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/: hydrogen_reference_lines.csv  hydrogen_reference_lines_provenance.md
docs/: claims_matrix.md  director_summary.md  math_references.md  native_s3_rs_schrodinger_derivation.md  pi_k_projection_intertwiner.md  public_release_readiness.md
notes/: angular_projection_s3_to_s2.md  appendix_b_closure_geometry_inverse_square_action.md  appendix_c_hopf_flux_projection_and_coulomb_field.md  appendix_coulomb_action_to_s3_operator.md  hydrogen_bridge_v1.md  layer_separation.md  native_s3_spectral_hydrogen_equation.md  pi_k_angular_intertwiner.md  s3_scalar_harmonic_shell_architecture.md
reports/: HYDROGEN_BRIDGE_V1_REPORT.md  angular_state_counts.csv  h_alpha_fine_structure.csv  hopf_flux_scaling.csv  hopf_projection_statistics.csv  pi_k_ang_diagnostics.csv  pi_k_l2_diagnostics.csv  rank1_transition_diagnostics.csv  series_comparison.csv  shell_locking_validation.csv  shell_table.csv
scripts/: generate_plots.py  generate_reports.py
simulator/: __init__.py  angular_operators.py  clebsch_gordan.py  fine_structure.py  hopf_flux_projection.py  hydrogen_shell_simulator.py  s3_s2_intertwiner.py  s3_spectral_operator.py  shell_locking_test.py  spectral_comparison.py
tests/: test_hopf_flux_projection.py  test_l2_and_rank1_operator.py  test_pi_k_ang_numerics.py  test_public_anchor_docs.py  test_s3_spectral_operator.py  test_simulator_scaffold.py
