[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrogen-bridge-v1"
version = "0.1.0"
description = "Calibrated Hydrogen Bridge v1 simulator and reports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
